# garmin-backups

./: .gitignore  .python-version  Manifest.toml  Project.toml  README.md  c2-logbook-export.py  clean-elite-hrv-txt.jl  clean-elitehrv-txt.py  clean-painsled-csv.py  import-script.py  import-script.sh  pyproject.toml  run.sh
activities/: .not_found
test-activities/: clean-painsled-csv.py
