[tool.poetry]
name = "garmin-backups"
version = "0.1.0"
description = ""
authors = ["Callum Arnold <24391445+arnold-c@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
garminexport = "^0.4.1"
keyring = "^23.6.0"
pyprojroot = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
